Fix item alignment in gx-grid-empty-indicator control

--- a/src/components/grid-base/grid-base.scss
+++ b/src/components/grid-base/grid-base.scss
@@ -8,24 +8,35 @@ $gridContentSelector: "& > *[slot='grid-content']:not(virtual-scroller), & > * >
   $justify-content: null,
   $align-items: null
 ) {
-  > .grid-empty-placeholder
-    > div
-    > .empty-indicator
-    > .empty-indicator-container {
+  & > .grid-empty-placeholder > div > .gx-empty-indicator > .gx-empty-item {
+    // Alignment for the gx-textblock control
     @if $text-align != null {
-      > .empty-indicator-text {
+      > gx-textblock {
         text-align: $text-align;
       }
-
-      > .empty-indicator-image {
-        justify-content: $justify-content;
+    }
+    @if $align-items != null {
+      > gx-textblock::part(valign) {
+        align-items: $align-items;
       }
     }
 
-    @if $align-items != null {
-      align-items: $align-items;
+    // Alignment for the gx-image control
+    @if $justify-content != null or $align-items != null {
+      > gx-image {
+        @if $justify-content != null {
+          justify-content: $justify-content;
+        }
+        @if $align-items != null {
+          align-self: $align-items;
+        }
+      }
     }
   }
+}
+
+[align="left"] > .gx-grid-empty {
+  @include empty-placeholder-alignment(start, flex-start);
 }
 
 [align="center"] > .gx-grid-empty {
@@ -34,6 +45,10 @@ $gridContentSelector: "& > *[slot='grid-content']:not(virtual-scroller), & > * >
 
 [align="right"] > .gx-grid-empty {
   @include empty-placeholder-alignment(end, flex-end);
+}
+
+[valign="top"] > .gx-grid-empty {
+  @include empty-placeholder-alignment($align-items: flex-start);
 }
 
 [valign="middle"] > .gx-grid-empty {
@@ -97,4 +112,9 @@ $gridContentSelector: "& > *[slot='grid-content']:not(virtual-scroller), & > * >
 
 .gx-grid-row {
   position: relative;
+
+  /*  gx-grid-smart-cell must hide its content overflow to ensure that the
+      border-radius property is applied
+  */
+  overflow: hidden;
 }
